fix: Add z-index to sections for clickable buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -271,6 +271,8 @@ button {
 /* Section */
 .section {
   padding: 8rem 2rem;
+  position: relative;
+  z-index: 10;
 }
 
 .section--gray {
